[package]
name = "lookbook"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    ".",
    "macros"
, "test-macros"]

[dependencies]
dioxus = { version = "0.5.1", features = ["web", "router", "serde"] }
# dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
# dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
# dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus" }
# dioxus-router = { git = "https://github.com/dioxuslabs/dioxus", features = ["web"] }
# dioxus-material = { git = "https://github.com/matthunz/dioxus-material" }
# dioxus-use-mounted = { git = "https://github.com/matthunz/dioxus-use-mounted" }
# dioxus-resize-observer = { git = "https://github.com/dioxus-community/dioxus-resize-observer" }
# dioxus_markdown = { git = "https://github.com/matthunz/markdown" }
linkme = "0.3.17"
lookbook-macros = { path = "macros" }
test-macros = { path = "test-macros" }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
dioxus-use-mounted = "0.2.0"
dioxus-resize-observer = "0.2.0"
serde_derive = "1.0"
dioxus-logger = "0.5.0"
tracing = "0.1.40"
